Add method to read chip8 game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,8 @@ add_library(c8_lib STATIC
   src/c8.c
   src/c8_private.c
   src/c8_random.c
-  src/c8_display.c)
+  src/c8_display.c
+  src/c8_read.c)
 target_compile_options(c8_lib PRIVATE ${COMPILER_WARNINGS} ${PROFILER_FLAGS})
 target_include_directories(c8_lib PUBLIC src)
 
