--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,7 +2,8 @@ add_executable(TestC8
     test_c8_interface.cc
     test_c8_opcode.cc
     test_c8_random.cc
-    test_c8_display.cc)
+    test_c8_display.cc
+    test_c8_read.cc)
 target_link_libraries(TestC8 GTest::GTest GTest::Main c8_lib)
 target_compile_options(TestC8 PRIVATE ${COMPILER_WARNINGS})
 
