--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(TestC8
     test_c8_display.cc
     test_c8_read.cc
     test_c8_keyboard.cc)
-target_link_libraries(TestC8 GTest::GTest GTest::Main c8_lib)
+target_link_libraries(TestC8 PRIVATE CONAN_PKG::gtest c8_lib)
 target_compile_options(TestC8 PRIVATE ${COMPILER_WARNINGS})
 
 gtest_add_tests(TARGET      TestC8
